Bug fix on Cart Overlay - image was spilling out of wrapper

--- a/wp-content/themes/zenit-theme/assets/styles/layouts/_shop.scss
+++ b/wp-content/themes/zenit-theme/assets/styles/layouts/_shop.scss
@@ -167,6 +167,7 @@
             .thumb-wrapper {
                 height: 150px;
                 width: 150px;
+                overflow: hidden;
 
                 span {
                     display: inline-block;
